Rectification des tests ayant échoués + Ajout du fichier jenkins